# FantasyMapGenerator

./: CMakeLists.txt  LICENSE.md  README.md
src/: config.cpp  config.h  dcel.cpp  dcel.h  delaunay.cpp  delaunay.h  extents2d.h  fontface.cpp  fontface.h  geometry.h  main.cpp  mapgenerator.cpp  mapgenerator.h  nodemap.h  poissondiscsampler.cpp  poissondiscsampler.h  render.cpp  render.h  resources.cpp  resources.h.in  spatialpointgrid.cpp  spatialpointgrid.h  vertexmap.cpp  vertexmap.h  voronoi.cpp  voronoi.h
src/argtable3/: README  argtable3.c
src/city_data/: countrycities.json
src/font_data/: font_data.json  fontlist.txt  updatefonts.py
src/fontdata/: fontlist.txt  updatefonts.py
src/jsoncons/: json.hpp  json_deserializer.hpp  json_error_category.hpp  json_filter.hpp  json_input_handler.hpp  json_output_handler.hpp  json_parser.hpp  json_reader.hpp  json_serializer.hpp  json_structures.hpp  json_traits.hpp  json_type_traits.hpp  jsoncons.hpp  jsoncons_io.hpp  output_format.hpp  ovectorstream.hpp  parse_error_handler.hpp
src/render/: check_cairo_support.py  rendermap.py
